2003-07-28  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* gdk/gdkglglext.h: 
	* gdk/x11/gdkglglxext.h: 
	* gdk/win32/gdkglwglext.h: Updated.

	* gdk/GL/gen-gdkglglext-h.pl: Define __glext_h_ before
	#include <GL/gl.h> to avoid including system's glext.h.

	* gdk/GL/gen-gdkglglxext-h.pl: Define __glxext_h_ before
	#include <GL/glx.h> to avoid including system's glxext.h.

	* gdk/GL/gen-gdkglwglext-h.pl: Define __wglext_h_ before
	#include <GL/gl.h> to avoid including system's wglext.h.

	* gdk/gdkglglext.h: 
	* gdk/GL/gen-gdkglglext-h.pl: Typedef GLhalfNV if needed.

	* configure.in: Check whether GLhalfNV typedef is needed.

2003-07-27  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* ==== Released 1.0.1 ====

	* configure.in: Version 1.0.1, Binary age 1, interface age 0.

2003-07-27  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* examples/font-pangoft2.c (gl_pango_ft2_render_layout): 
	* examples/font-pangoft2-tex.c (gl_tex_pango_ft2_render_layout):
	Use GL_UNSIGNED_BYTE data type if OpenGL 1.2 is not supported.

2003-07-27  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* examples/Makefile.mingw (PROGRAMS): 
	* examples/Makefile.msc (PROGRAMS): Removed font-pangoft2*
	examples. They don't work on win32.

2003-07-24  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* gtk/gtkglwidget.c (struct GLWidgetPrivate): Added
	unrealize_handler and destroy_handler members. Removed
	need_unrealize flag.
	(gtk_gl_widget_realize, gtk_gl_widget_unrealize) 
	(gtk_widget_set_gl_capability): "unrealize" signal handler
	connection is done by "realize" handler. This change makes
	user's "unrealize" handler possible to call OpenGL functions.
	(gtk_widget_get_gl_context, gtk_gl_widget_destroy_gl_context):
	"destroy" signal handler connection is done by
	gtk_widget_get_gl_context().

	* examples/template.c (unrealize): OpenGL functions can be called
	in "unrealize" handler.

2003-07-24  Naofumi Yasufuku  <naofumi@users.sourceforge.net>
